--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
