--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-proposal-export-default-from", "macros"]
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from",
+    "macros",
+    "babel-plugin-styled-components"
+  ]
 }
