--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "core-js": "^3.4.1",
     "express": "^4.17.1",
+    "focus-visible": "^5.0.2",
     "lodash": "^4.17.15",
     "polished": "^3.4.1",
     "prettier": "^1.19.1",
